removing scroll bar hiding on safari/chrome to try and fix my iOS site.

--- a/docs/assets/stylesheet.css
+++ b/docs/assets/stylesheet.css
@@ -14,9 +14,6 @@ html {
     -ms-overflow-style: none;  /* Internet Explorer 10+ scroll bar hiding*/
     scrollbar-width: none;  /* Firefox scroll bar hiding*/
     }
-html::-webkit-scrollbar {
-    display: none;  /* Safari and Chrome scroll bar hiding*/
-}
 h1 {
     font-weight: 300;
 }
